src/objects/Demo__c.object
<CustomObject>
    <label>Demo</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Demo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Details</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sharepoint_link__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sharepoint link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Coming soon</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Future X (FX)</fullName>
                </value>
                <value>
                    <fullName>Digital Service Provider (DSP)</fullName>
                </value>
                <value>
                    <fullName>Digital City (DC)</fullName>
                </value>
                <value>
                    <fullName>Digital Enterprise (DE)</fullName>
                </value>
                <value>
                    <fullName>Digital Life (DL)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Offline demo / Animation</fullName>
                </value>
                <value>
                    <fullName>Offline demo / Video</fullName>
                </value>
                <value>
                    <fullName>Offline demo / VR</fullName>
                </value>
                <value>
                    <fullName>Offline demo / AR</fullName>
                </value>
                <value>
                    <fullName>AirScale antennas / Offline demo</fullName>
                </value>
                <value>
                    <fullName>Offline demo + AR (part 1) / Live demo (part 2)</fullName>
                </value>
                <value>
                    <fullName>Offline demo</fullName>
                </value>
                <value>
                    <fullName>Live demo</fullName>
                </value>
                <value>
                    <fullName>Live HW display (AirScale Base Station with Liquid Cooling)</fullName>
                </value>
                <value>
                    <fullName>Live demos (#1 and #2), offline demo using VR (#3)</fullName>
                </value>
                <value>
                    <fullName>2 interactive offline demos / animation</fullName>
                </value>
                <value>
                    <fullName>Cold hardware + offline demo</fullName>
                </value>
                <value>
                    <fullName>Live demo (5G mode simulated)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Venue</label>
        <referenceTo>Venue__c</referenceTo>
        <relationshipLabel>Demos</relationshipLabel>
        <relationshipName>Demos</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Topic__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Venue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>EEC_Espoo_Active_Demos</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Topic__c</columns>
        <columns>Type__c</columns>
        <columns>Venue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Venue__c</field>
            <operation>equals</operation>
            <value>Executive Experience Center (EEC) Espoo</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>EEC Espoo Active Demos</label>
    </listViews>
    <listViews>
        <fullName>EEC_Plano_Active_Demos</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Topic__c</columns>
        <columns>Type__c</columns>
        <columns>Venue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Venue__c</field>
            <operation>equals</operation>
            <value>EEC Espoo</value>
        </filters>
        <label>EEC Plano Active Demos</label>
    </listViews>
</CustomObject>