src/objects/Demo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Topic__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Venue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>