src/objects/Demo__c/listViews/EEC_Plano_Active_Demos.listView-meta.xml
<ListView>
    <fullName>EEC_Plano_Active_Demos</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Topic__c</columns>
    <columns>Type__c</columns>
    <columns>Venue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Venue__c</field>
        <operation>equals</operation>
        <value>EEC Espoo</value>
    </filters>
    <label>EEC Plano Active Demos</label>
</ListView>